changed how the sidebar worked meaning it no longer needed a z-index and now the external links are working again while also working with the navbar

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,6 +6,7 @@
 @import './sidebar.css';
 @import './icon.css';
 @import './image.css';
+@import './topbar.css';
 
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
@@ -28,11 +29,15 @@ body {
     background-size: 2em 2em;
     font-family: "Space Mono", monospace;
     --sidebar-width: 400px;
+    overflow: hidden;
 }
 
 /* main body container*/
 .main-body-container {
-    max-width: calc(100% - var(--sidebar-width));
+    width: 100%;
+    min-height: 100%;
+    overflow-y: scroll;
+    overflow-x: none;
 }
 
 @media screen and (max-width: 750px) {
@@ -87,4 +92,12 @@ body {
     padding-top: 20px;
     font-size: 20px;
     word-break: normal;
+}
+
+#full-body-container {
+    display: flex;
+    justify-content: space-between;
+    max-height: 94vh;
+    min-height: 94vh;
+    overflow: hidden;
 }
