--- a/resources/css/navbar.css
+++ b/resources/css/navbar.css
@@ -14,14 +14,6 @@
     width: 100%;
 }
 
-.nav-container {
-    position: fixed;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 62px;
-}
-
 .navbar .nav-container li {
     list-style: none;
 }
@@ -40,9 +32,12 @@
 
 .nav-container {
     display: block;
-    height: 60px;
+    height: 6vh;
+    min-height: 60px;
     background-color: #00ff9f;
     border-bottom: 3px solid rgb(0, 0, 0);
+    justify-content: space-between;
+    align-items: center;
 }
 
 .nav-container .checkbox {
