--- a/resources/css/sidebar.css
+++ b/resources/css/sidebar.css
@@ -1,7 +1,5 @@
 /* Style the sidebar - fixed full height */
 .sidebar {
-    top: 60px;
-    bottom: 0;
     background-color: #fbf4a0;
     overflow-x: hidden;
     border-left: 3px solid #000;
@@ -9,11 +7,8 @@
     display: flex;
     flex-direction: column;
     width: fit-content;
-    justify-self: end;
-    position: fixed;
     justify-content: space-between;
     max-width: var(--sidebar-width);
-    z-index: -1;
 }
 
 @media screen and (max-width: 750px) {
@@ -24,6 +19,6 @@
         background-color: #fbf4a0;
         border-bottom: 3px solid #000;
         border-left: none;
-        position: relative;
+        display: none;
     }
 }
